--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,7 +7,7 @@ modId="lifeofnexus"
 version="1.0.0-1.18.1" 
 displayName="LifeOfNexus!" 
 logoFile="logo.png" 
-credits="Thanks for this mod to myself" 
+credits="Thanks for this mod to Akhil" 
 authors="NexusDino" 
 description='''
 	The life of me, very sad :(
